fix: safari 17 - clear button icon not visible
Fixes missing clear button caused by default user agent styles.

--- a/styles/global-blocks.css
+++ b/styles/global-blocks.css
@@ -669,6 +669,7 @@
     border-radius: var(--spectrum-corner-radius-1000);
     height: 2rem;
     width: 2rem;
+    padding: 0;
     position: absolute;
     inset-inline-end: 0;
     inset-block-start: 0;
